sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:9: error: type mismatch;
 found   : Boolean(false)
 required: Int
    fin = false;
          ^