sort.basic.cocktail.AlgCocktailSort2.scala.code
var fini:Boolean = true
var debut:Int = 0
var fin:Int=getNombreValeurs()-2

def cocktailSort2() {
  
  do{
    fin = false;
    for (i <- debut to fin){
      if (!plusPetit(i,i+1)){
        echange(i,i+1)
        fin-=1
        fini = true;
      }
     
     for (i <-debut to fin by -1) {
       if (!plusPetit(i,i+1)){
         echange(i,i+1)
         debut+=1
         fini = true;
       }
     }
    }
  }while (fini == true)
}